<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">woopy</string>
    <string name="ADMOB_BANNER_UNIT_ID">ca-app-pub-9733347540588953/7805958028</string>
    <string name="facebook_app_id">1373896799328580</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_launch_screen">LaunchScreen</string>
    <string name="page1">page 1</string>
    <string name="page2">page 2</string>
    <string name="page3">Page 3</string>
    <string name="title_activity_image_preview">ImagePreview</string>
    <string name="txt_loading">loading...</string>
    <string name="btn_browse">Browse</string>
    <string name="btn_mylikes">My Likes</string>
    <string name="btn_sell">Sell</string>
    <string name="btn_activity">Activity</string>
    <string name="btn_account">Account</string>
    <string name="txt_joined">Joined:</string>
    <string name="txt_verified">Verified:</string>
    <string name="btn_feedbacks">Feedbacks</string>
    <string name="btn_edit_profile">Edit profile</string>
    <string name="btn_logout">Logout</string>
    <string name="txt_my_ads">MY ADS</string>
    <string name="alert_logout">Are you sure you want to logout?</string>
    <string name="alert_confirm_logout">OK</string>
    <string name="alert_loging_out">Logging out...</string>
    <string name="alert_cancel">Cancel</string>
    <string name="txt_joined_since">Joined: </string>
    <string name="alert_verified_yes">Verified: Yes</string>
    <string name="alert_verified_no">Verified: No</string>
    <string name="alert_please_wait">Please wait...</string>
    <string name="txt_long_press_to_delete">Long press to delete</string>
    <string name="toast_activity_removed">Activity removed!</string>
    <string name="txt_ad_details">Ad details</string>
    <string name="btn_dots">•••</string>
    <string name="txt_like">Like</string>
    <string name="btn_chat_with_seller">Chat with Seller</string>
    <string name="txt_price">Price: </string>
    <string name="txt_condition">Condition: </string>
    <string name="txt_category">Category: </string>
    <string name="txt_location">Location: </string>
    <string name="btn_video">Video:</string>
    <string name="txt_seller">Seller</string>
    <string name="txt_user_name">username </string>
    <string name="btn_Post_read_comments">Post/Read comments</string>
    <string name="btn_send_feedback">Send Feedback</string>
    <string name="alert_select_option">Select option</string>
    <string name="alert_report_ad">Report Ad</string>
    <string name="alert_share">Share</string>
    <string name="alert_share_on">Share on...</string>
    <string name="toast_sorry">Sorry</string>
    <string name="toast_has_blocked_you_you_cant_chat_with_this_user">has blocked you, you can not chat with this user.</string>
    <string name="toast_you_must_be_logged_in_to_chat_want_to_login_now">You must be logged in to chat. Want to login now?</string>
    <string name="toast_You_must_be_logged_in_to_like_this_ad_want_to_login_now">You must be logged in to like this Ad. Want to login now?</string>
    <string name="toast_liked_your_ad"> liked your Ad: </string>
    <string name="toast_geocoder_not_present">Geocoder not present!</string>
    <string name="toast_watch_video">Video: Watch video</string>
    <string name="toast_Video">Video: N/A</string>
    <string name="toast_you_must_be_logged_in_to_comment_want_to_login_now">You must be logged in to comment. Want to Login now?</string>
    <string name="toast_you_must_be_logged_in_to_send_a_feedback_want_to_login_now">You must be logged in to send a feedback. Want to login now?</string>
    <string name="edt_search_on_woopy">Search on woopy...</string>
    <string name="txt_your_search_did_not_match_any_listings_try_another_search">Your search did not match any listings. Try another search?</string>
    <string name="txt_sort_by">SORT BY</string>
    <string name="btn_recent">Recent</string>
    <string name="btn_all">All</string>
    <string name="txt_CATEGORY">CATEGORY</string>
    <string name="btn_NewYorkUSA">New York, USA</string>
    <string name="alert_you_must_type_somehting">You must type somehting!</string>
    <string name="toast_You_must_be_loggen_in_to_see_your_Chats_want_to_login_now">You must be loggen in to see your Chats. Want to login now?</string>
    <string name="toast_Failed_to_get_your_Location">Failed to get your Location.</string>
    <string name="toast_Go_into_Settings_and_make_sure_Location_Service_is_enabled">Go into Settings and make sure Location Service is enabled!</string>
    <string name="alert_Mi_FROM"> Mi FROM</string>
    <string name="toast_You_must_be_logged_in_to_see_and_post_comments_Want_to_login_now">You must be logged in to see and post comments. Want to login now?</string>
    <string name="alert_Report_Ad">Report Ad</string>
    <string name="toast_You_must_be_logged_in_to_like_this_Ad_Want_to_login_now">You must be logged in to like this Ad. Want to login now?</string>
    <string name="btn_Done">Done</string>
    <string name="txt_Choose_category">Choose category</string>
    <string name="alert_Select_a_Category_or_tap_Cancel">Select a Category, or tap Cancel!</string>
    <string name="txt_Chats">Chats</string>
    <string name="alert_commented_your_Ad">commented your Ad: </string>
    <string name="txt_Comments">Comments</string>
    <string name="btn_Send">Send </string>
    <string name="edt_Type_here">Type here...</string>
    <string name="btn_OK">OK</string>
    <string name="btn_login">Login</string>
    <string name="txt_Set_distance">Set distance</string>
    <string name="txt_50_miles_around_your_location">50 miles around your location</string>
    <string name="edt_Type_a_location_and_hit_search">Type a location and hit search </string>
    <string name="toast_miles_around_your_location"> miles around your location</string>
    <string name="alert_Pick_from_Gallery">Pick from Gallery</string>
    <string name="alert_Take_Picture">Take a Picture</string>
    <string name="alert_Select_source">Select source</string>
    <string name="alert_You_must_insert_at_least_a_username_and_your_full_name">You must insert at least a username and your full name!</string>
    <string name="alert_Your_Profile_has_been_updated">Your Profile has been updated!</string>
    <string name="alert_Type_the_valid_email_address_you_have_used_to_register_on_this_app">Type the valid email address you have used to register on this app</string>
    <string name="alert_Reset_Password">Reset Password</string>
    <string name="alert_We_ve_sent_you_an_email_to_reset_your_password">We have sent you an email to reset your password!</string>
    <string name="alert_Select_Image">Select Image</string>
    <string name="txt_Edit_Profile">Edit Profile</string>
    <string name="btn_Save">Save</string>
    <string name="edt_type_username">type a username</string>
    <string name="txt_Username">Username: </string>
    <string name="txt_Full_Name">Full Name: </string>
    <string name="edt_type_your_full_name">type your full name</string>
    <string name="txt_Website">Website: </string>
    <string name="edt_ex_http_mywebsite_com">ex: http://mywebsite.com</string>
    <string name="txt_About_me">About me: </string>
    <string name="edt_type_something_about_you">type something about you</string>
    <string name="txt_Photo">Photo: </string>
    <string name="txt_Tap_to_change_photo">Tap to change photo</string>
    <string name="btn_Reset_Password">Reset Password</string>
    <string name="btn_Read_Terms_of_Service">Read Terms of Service</string>
    <string name="txt_Feedbacks">Feedbacks</string>
    <string name="txt_PINCH_TO_ZOOM_TAP_TO_CLOSE">PINCH TO ZOOM | TAP TO CLOSE</string>
    <string name="alert_You_must_be_logged_in_to_see_your_Chats_Want_to_login_now">You must be logged in to see your Chats. Want to login now?</string>
    <string name="edt_Search_on_woopy">Search on woopy...</string>
    <string name="alert_You_must_type_something_or_send_picture">You must type something or send a picture!</string>
    <string name="alert_Unblock_User">Unblock User</string>
    <string name="alert_block_User">Block User</string>
    <string name="alert_Select_option">Select option</string>
    <string name="alert_Report_User">Report User</string>
    <string name="alert_You_have_blocked_this_User_you_will_no_longer_get_Chat_messages_from">You have blocked this User, you will no longer get Chat messages from @</string>
    <string name="alert_You_ve_unblocked">You have unblocked @</string>
    <string name="alert_Delete_Chat">Delete Chat</string>
    <string name="alert_Are_you_sure_you_want_to_delete_this_Chat">Are you sure you want to delete this Chat? @</string>
    <string name="alert_Tap_the_picture_to_close">Tap the picture to close</string>
    <string name="txt_username">username</string>
    <string name="txt_type_your_message">type your message</string>
    <string name="alert_Type_the_valid_email_address_you_have_used_to_register_on_this_ap">Type the valid email address you have used to register on this app</string>
    <string name="alert_We_have_sent_you_an_email_to_reset_your_password">We have sent you an email to reset your password!</string>
    <string name="txt_woopy">woopy</string>
    <string name="txt_password">password</string>
    <string name="txt_Login">Login</string>
    <string name="txt_Sign_up_with_Email">Sign up with Email </string>
    <string name="txt_Forgot_password">Forgot password?</string>
    <string name="toast_You_must_move_the_Map_and_to_choose_Location_or_just_close_this_Map_screen">You must move the Map and to choose a Location, or just close this Map screen</string>
    <string name="txt_Move_and_zoom_to_set_location">Move and zoom to set location</string>
    <string name="alert_LocationpermissionisneededtosearchAdsnearbyyourlocationPleaseenableLocationinAppSettingotherwiseyoullgetAdsonlyfromNewYorkCity">Location permission is needed to search Ads nearby your location. Please enable Location in App Settings, otherwise you will get Ads only from New York City.</string>
    <string name="toast_Microphone_permission_needed_for_recording_Please_allow_in_App_Settings_for_additional_functionality">Microphone permission needed for recording. Please allow in App Settings for additional functionality.</string>
    <string name="toast_External_Storage_permission_needed_Please_allow_in_App_Settings_for_additional_functionality">External Storage permission needed. Please allow in App Settings for additional functionality.</string>
    <string name="toast_External_Storage_permission_needed_Please_allow_in_App_Settings_for_additional_functionalit">External Storage permission needed. Please allow in App Settings for additional functionality.</string>
    <string name="toast_Camera_permission_needed_Please_allow_in_App_Settings_foradditional_functionality">Camera permission needed. Please allow in App Settings for additional functionality.</string>
    <string name="alert_location_permission">Location permission is needed to search Ads nearby your location. Please enable Location in App Settings, otherwise you will get Ads only from New York City.</string>
    <string name="alert_Removing_liked_ad">Removing liked ad...</string>
    <string name="txt_Listings_you_liked_will_be_displayed_here">Listings you liked will be displayed here.</string>
    <string name="alert_Are_you_sure_you_want_to_report_this">Are you sure you want to report this </string>
    <string name="alert_for_the_following_reason"> for the following reason:</string>
    <string name="txt_Report">Report</string>
    <string name="txt_SELECT_AN_OPTION">SELECT AN OPTION</string>
    <string name="txt_Check_Feedbacks">Check Feedbacks</string>
    <string name="txt_ADS_POSTED">ADS POSTED</string>
</resources>