<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/report_ad_or_user"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReportAdOrUser">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:background="#fa334a"
        android:id="@+id/repTopView"
        android:layout_alignParentEnd="true">


        <Button
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:id="@+id/repCancelButt"
            android:background="@android:color/transparent"
            android:text="@string/alert_cancel"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="12dp"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="11dp"/>

        <TextView
            android:text="@string/txt_Report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/repTitleTxt"
            android:layout_alignParentBottom="true"
            android:textColor="#fff"
            android:textStyle="normal|bold"
            android:gravity="center_vertical"/>
    </RelativeLayout>

    <TextView
        android:text="@string/txt_SELECT_AN_OPTION"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/repTopView"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView6"
        android:layout_marginTop="5dp"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/repListView"
        android:choiceMode="singleChoice"
        android:listSelector="#eee"
        android:layout_below="@+id/textView6"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"/>


</RelativeLayout>
