<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/user_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfile">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:background="#fa334a"
        android:id="@+id/upTopView">

        <Button
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/upOptionsButt"
            android:text="•••"
            android:textColor="#fff"
            android:textSize="18dp"
            android:background="@android:color/transparent"
            android:layout_marginRight="10dp"/>

        <TextView
            android:text="@string/txt_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/upUsernameTxt"
            android:layout_alignParentBottom="true"
            android:textColor="#fff"
            android:textStyle="normal|bold"
            android:gravity="center_vertical"/>


        <Button
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:id="@+id/upBackButt"
            android:background="@drawable/back_butt"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="18dp"
            android:layout_alignBaseline="@+id/upOptionsButt"
            android:layout_alignBottom="@+id/upOptionsButt"
            android:layout_alignParentStart="true"/>


    </RelativeLayout>


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/upAvatarImg"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginLeft="8dp"
        android:src="@drawable/logo"
        android:layout_marginStart="11dp"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/upTopView"
        android:layout_alignParentStart="true"/>


    <TextView
        android:text="@string/txt_loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/upAvatarImg"
        android:layout_toEndOf="@+id/upAvatarImg"
        android:id="@+id/upFullNameTxt"
        android:textStyle="normal|bold"
        android:textColor="#333"
        android:layout_marginLeft="10dp"
        android:singleLine="true"
        android:maxLines="1"/>

    <TextView
        android:text="@string/txt_joined"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/upFullNameTxt"
        android:layout_alignStart="@+id/upFullNameTxt"
        android:id="@+id/upJoinedTxt"
        android:textSize="11sp"
        android:layout_marginTop="5dp"/>

    <TextView
        android:text="@string/txt_verified"
        android:textSize="11sp"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/upJoinedTxt"
        android:layout_alignStart="@+id/upJoinedTxt"
        android:id="@+id/upVerifiedTxt"/>


    <com.google.android.gms.ads.AdView
        android:id="@+id/admobBanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/ADMOB_BANNER_UNIT_ID"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">
    </com.google.android.gms.ads.AdView>

    <ListView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/upUserAdsListView"
        android:divider="#e5e5e5"
        android:dividerHeight="1dp"
        android:layout_below="@+id/upAdsposted"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/admobBanner"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/upCheckFeedbacksButt"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_alignEnd="@+id/admobBanner"
        android:layout_alignTop="@+id/upJoinedTxt"
        android:layout_marginEnd="26dp"
        android:background="@android:color/transparent"
        android:gravity="center_vertical"
        android:paddingBottom="5dp"
        android:text="@string/txt_Check_Feedbacks"
        android:textAllCaps="false"
        android:textColor="@color/main_color"
        android:textSize="12sp"
        android:textStyle="normal|bold"/>

    <TextView
        android:id="@+id/upAboutTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/upAvatarImg"
        android:layout_below="@+id/upAvatarImg"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:maxLines="4"
        android:text="@string/txt_loading"
        android:textSize="10sp"/>

    <TextView
        android:text="@string/txt_ADS_POSTED"
        android:textSize="12sp"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/upAdsposted"
        android:textStyle="normal|bold"
        android:textColor="#333"
        android:layout_below="@+id/upAboutTxt"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"/>

    <Button
        android:id="@+id/upWebButt"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:background="@android:color/transparent"
        android:fontFamily="sans-serif"
        android:text="@string/txt_loading"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="#777"
        android:textSize="11sp"
        android:layout_below="@+id/upVerifiedTxt"
        android:layout_alignStart="@+id/upVerifiedTxt"/>


</RelativeLayout>
